res/css/views/rooms/_EventTile.scss
/* ... */
.mx_EventTile_collapsedCodeBlock {
    max-height: 30vh;
}

.mx_EventTile:hover .mx_EventTile_body pre,
.mx_EventTile.focus-visible:focus-within .mx_EventTile_body pre {
    border: 1px solid $tertiary-content;
}

.mx_EventTile_pre_container {
    // For correct positioning of _copyButton (See TextualBody)
    position: relative;
}

// Inserted adjacent to <pre> blocks, (See TextualBody)
.mx_EventTile_button {
    position: absolute;
    display: inline-block;
    visibility: hidden;
    cursor: pointer;
    top: 8px;
    right: 8px;
    width: 19px;
    height: 19px;
    background-color: $message-action-bar-fg-color;
}

.mx_EventTile_buttonBottom {
    top: 33px;
}

.mx_EventTile_copyButton {
    mask-image: url($copy-button-url);
}

.mx_EventTile_collapseButton {
    mask-size: 75%;
    mask-position: center;
    mask-repeat: no-repeat;
    mask-image: url("$(res)/img/element-icons/minimise-collapse.svg");
}

.mx_EventTile_expandButton {
    mask-size: 75%;
    mask-position: center;
    mask-repeat: no-repeat;
    mask-image: url("$(res)/img/element-icons/maximise-expand.svg");
}

.mx_EventTile_body .mx_EventTile_pre_container:focus-within .mx_EventTile_copyButton,
.mx_EventTile_body .mx_EventTile_pre_container:hover .mx_EventTile_copyButton,
.mx_EventTile_body .mx_EventTile_pre_container:focus-within .mx_EventTile_collapseButton,
.mx_EventTile_body .mx_EventTile_pre_container:hover .mx_EventTile_collapseButton,
.mx_EventTile_body .mx_EventTile_pre_container:focus-within .mx_EventTile_expandButton,
.mx_EventTile_body .mx_EventTile_pre_container:hover .mx_EventTile_expandButton {
    visibility: visible;
}

.mx_EventTile_content .markdown-body h1,
.mx_EventTile_content .markdown-body h2,
.mx_EventTile_content .markdown-body h3,
.mx_EventTile_content .markdown-body h4,
.mx_EventTile_content .markdown-body h5,
.mx_EventTile_content .markdown-body h6 {
    font-family: inherit !important;
    color: inherit;
}

/* Make h1 and h2 the same size as h3. */
.mx_EventTile_content .markdown-body h1,
.mx_EventTile_content .markdown-body h2 {
    font-size: 1.5em;
    border-bottom: none !important; // override GFM
}

.mx_EventTile_content .markdown-body a {
    color: $accent-alt;
}

.mx_EventTile_content .markdown-body blockquote {
    border-left: 2px solid $blockquote-bar-color;
    border-radius: 2px;
    padding: 0 10px;
}

/*
// actually, removing the Italic TTF provides
// better results seemingly

// compensate for Nunito italics being terrible
// https://github.com/google/fonts/issues/1726
.mx_EventTile_content .markdown-body em {
    transform: skewX(-14deg);
    display: inline-block;
}
*/

/* end of overrides */

.mx_EventTile_keyRequestInfo {
    font-size: $font-12px;
}

.mx_EventTile_keyRequestInfo_text {
    opacity: 0.5;
}

.mx_EventTile_keyRequestInfo_text .mx_AccessibleButton {
    @mixin ButtonResetDefault;
    color: $primary-content;
    text-decoration: underline;
    cursor: pointer;
}

.mx_EventTile_keyRequestInfo_tooltip_contents p {
    text-align: auto;
    margin-left: 3px;
    margin-right: 3px;
}

.mx_EventTile_keyRequestInfo_tooltip_contents p:first-child {
    margin-top: 0px;
}

.mx_EventTile_keyRequestInfo_tooltip_contents p:last-child {
    margin-bottom: 0px;
}

.mx_EventTile_tileError {
    color: red;
    text-align: center;

    // Remove some of the default tile padding so that the error is centered
    margin-right: 0;

    .mx_EventTile_line {
        padding-left: 0;
        margin-right: 0;
    }

    .mx_EventTile_line span {
        padding: 4px 8px;
    }

    a {
        margin-left: 1em;
    }
}

.mx_EventTile:hover .mx_MessageActionBar,
.mx_EventTile.mx_EventTile_actionBarFocused .mx_MessageActionBar,
[data-whatinput='keyboard'] .mx_EventTile:focus-within .mx_MessageActionBar,
.mx_EventTile.focus-visible:focus-within .mx_MessageActionBar {
    visibility: visible;
}

@media only screen and (max-width: 480px) {

    .mx_EventTile_line,
    .mx_EventTile_reply {
        padding-left: 0;
        margin-right: 0;
    }

    .mx_EventTile_content {
        margin-top: 10px;
        margin-right: 0;
    }
}

.mx_ThreadSummaryIcon::before,
.mx_ThreadInfo::before {
    content: "";
    display: inline-block;
    mask-image: url('$(res)/img/element-icons/thread-summary.svg');
    mask-position: center;
    height: 18px;
    min-width: 18px;
    background-color: $secondary-content;
    mask-repeat: no-repeat;
    mask-size: contain;
}

.mx_ThreadSummaryIcon {
    font-size: $font-12px;
    color: $secondary-content;
    margin-top: 8px;
    margin-bottom: 8px;

    &::before {
        vertical-align: middle;
        margin-right: 8px;
    }
}
/* ... */

